[package]
name            = "fullstop"
version         = "1.0.6"
authors         = ["Ferris Tseng <ferristseng@fastmail.fm>"]
keywords        = ["fullstop", "sentence", "token", "tokenizer"]
license         = "MIT/Apache-2.0"
repository      = "https://github.com/ferristseng/rust-fullstop"
description     = "An implementation of a Punkt sentence tokenizer"
readme          = "README.md"
edition         = "2024"

[dependencies]
num             = "0.4"
phf             = { version = "0.11", features = ["macros"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"

[dev-dependencies]
walkdir         = "2.3"
criterion       = "0.5"

[[bench]]
name = "tokenizers"
harness = false

[[bench]]
name = "trainers"
harness = false